--- a/templates/follow-sop-register.html
+++ b/templates/follow-sop-register.html
@@ -82,7 +82,8 @@
                             {% elif col.column_type == 'score_total' %}
                                 {% set span = 4 %}
                             {% elif col.column_span and col.column_span|int > 0 %}
-                                {% set span = col.column_span|int %}
+                                {% set cs = col.column_span|int %}
+                                {% set span = cs if cs >= 2 else 2 %}
                             {% else %}
                                 {% set span = 2 %}
                             {% endif %}
